<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Webo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view">My Weibo</string>
    <string name="avatar">Avatar</string>
    <string name="repost">Repost</string>
    <string name="comment">Comment</string>
    <string name="favour">Favour</string>
    <string name="holder">Holder</string>
    <string name="downArrow">DownArrow</string>
    <string name="upArrow">UpArrow</string>
    <string name="dropdown_refresh">Drop down to Refresh</string>
    <string name="title_activity_view_weibo">ViewWeiboActivity</string>
    <string name="cache">Cache</string>
    <string name="title_activity_write_weibo">WriteWeiboActivity</string>
    <string name="weibo">weibo</string>
    <string name="write">write</string>
    <string name="message">message</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="create_weibo">To be or not to be?</string>
    <string name="clear">Clear</string>
    <string name="post">Post</string>
    <string name="words_limit">140</string>
    <string name="words_null">Words is empty</string>
    <string name="words_overflow">Words Count Overflow</string>
    <string name="send_ing">Send weibo ing</string>
    <string name="send_success">Send weibo success</string>
    <string name="send_failure">Send failure</string>
    <string name="network_not_available">Network is not available</string>
    <string name="no_user_find">No user find</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="configure">Configure</string>
    <string name="exit">Exit</string>
    <string name="followers_count">Followers</string>
    <string name="starred_count">Starred</string>
    <string name="weibo_count">Weibo Count</string>
    <string name="zero">0</string>
    <string name="long_num">100000</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="title_activity_search">Search</string>
    <string name="search_title">search</string>
    <string name="search_hint">Input user name</string>
    <string name="screen_name">Screen name</string>
    <string name="login_weibo">Login Weibo</string>
    <string name="prompt_title">Prompt</string>
    <string name="prompt">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_retweet_reply">RetweetReplyActivity</string>
    <string name="title_activity_weibo_details">WeiboDetailsActivity</string>
    <string name="title_activity_configure">ConfigureActivity</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="show_image">Show Image</string>
    <string name="top">Top</string>
    <string name="title_activity_show_images_view_pager">ShowImagesViewPagerActivity</string>
    <string name="comment_on_my_weibo">Comments on My Weibo:</string>
    <string name="title_activity_test_decorate_text_view">TestDecorateTextViewActivity</string>
    <string name="basic_conf">Basic Configuration</string>
    <string name="notification_conf">Notification Configuration</string>
    <string name="image_conf">Image Configuration</string>
    <string name="other_conf">Others</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="font_size">Font Size</string>
    <string name="new_weito_notify">New Weibo Notification</string>
    <string name="new_msg_notify">New Message Notification</string>
    <string name="display_image">Display Image</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about">About</string>
    <string name="title_activity_preference_settings">PreferenceSettingsActivity</string>
    <string name="title_activity_about">About</string>
    <string name="version_name">1.0</string>
    <string name="author_name">minixalpha@github</string>

</resources>