<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/screen_name"
        style="@style/UserInfoTitle"
        android:text="@string/holder" />

    <LinearLayout
        android:id="@+id/uesr_info_count_text"
        style="@style/UserInfoTextRow" >

        <TextView
            android:id="@+id/followers_text"
            style="@style/UserInfoText"
            android:text="@string/followers_count" />

        <TextView
            android:id="@+id/starred_text"
            style="@style/UserInfoText"
            android:text="@string/starred_count" />

        <TextView
            android:id="@+id/weibo_count_text"
            style="@style/UserInfoText"
            android:text="@string/weibo_count" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uesr_info_count"
        style="@style/UserInfoTextRow" >

        <TextView
            android:id="@+id/followers_count"
            style="@style/UserInfoText"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/starred_count"
            style="@style/UserInfoText"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/weibo_count"
            style="@style/UserInfoText"
            android:text="@string/zero" />
    </LinearLayout>

</LinearLayout>