<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/weibo_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/screen_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/avatar"
            android:gravity="center"
            android:text="@string/holder"
            android:textColorLink="#3E90C7"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/holder"
            android:textColorLink="#3E90C7"
            android:visibility="gone" />

        <TextView
            android:id="@+id/create_at"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/holder"
            android:textColor="#BBBBBB" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weibo_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:lineSpacingExtra="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/holder"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/repost_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#EEEEEE"
            android:lineSpacingExtra="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/holder"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weibo_footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#E8E8E8"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_repost"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:drawableLeft="@drawable/share_thin_20"
            android:paddingLeft="20dp"
            android:text="@string/repost" />

        <Button
            android:id="@+id/btn_comment"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:drawableLeft="@drawable/comments_thin_16"
            android:paddingLeft="20dp"
            android:text="@string/comment" />

        <Button
            android:id="@+id/btn_favour"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:drawableLeft="@drawable/like_16"
            android:paddingLeft="20dp"
            android:text="@string/favour" />
    </LinearLayout>

</LinearLayout>